# delve-client

./: index.html  package-lock.json  package.json  tailwind.config.js
src/: App.vue  index.css  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/api/: channels.ts  communities.ts  fetchWrapper.ts  invites.ts  members.ts  messages.ts  models.ts  roles.ts  users.ts
src/api/gateway/: events.ts  gateway.ts
src/components/views/authView/: AuthView.vue
src/components/views/authView/pageCards/: LoginCard.vue  RegisterCard.vue  SecretCard.vue  SignedInCard.vue  WelcomeCard.vue
src/store/: index.ts
src/views/appView/: AppView.vue
src/views/appView/components/ChannelSidebar/: ChannelOption.vue  ChannelSidebar.vue  ChannelSidebarHeader.vue
src/views/appView/components/ChatView/: ChatChannelWelcomeHeader.vue  ChatControl.vue  ChatMessage.vue  ChatMessageView.vue  ChatView.vue  ChatViewHeader.vue
src/views/appView/components/CommunitySidebar/: CommunityCreateIcon.vue  CommunityHomeIcon.vue  CommunitySidebar.vue  CommunitySidebarCommunityIcon.vue  CommunitySidebarIcon.vue
src/views/appView/components/MemberListView/: MemberListItem.vue  MemberListView.vue
src/views/appView/components/Modals/: BaseModal.vue  ConfirmationDeletionModal.vue  CreateChannel.vue  CreateCommunity.vue  CreateInviteModal.vue  JoinCommunity.vue  ModifyChannel.vue  ModifyCommunity.vue  (+1 more)
src/views/authView/: AuthView.vue
src/views/authView/pageCards/: BaseCard.vue  LoginCard.vue  RegisterCard.vue  SecretCard.vue  SignedInCard.vue  WelcomeCard.vue
(+9 files in other folders)
